// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders info message when no items match search 1`] = `
<article
  class="sc-fjdhpX hpJXzn sc-jTzLTM jufxiL"
>
  <h1
    class="sc-cSHVUG iOMKIM sc-jzJRlG dGTYFu"
  >
    Bolverk failed to find items for 
    <strong
      class="sc-gqjmRU gyUJSx"
    >
      xxx
    </strong>
  </h1>
</article>
`;

exports[`renders loaded item 1`] = `
<article
  class="sc-fjdhpX hpJXzn sc-jTzLTM jufxiL"
>
  <h1
    class="sc-cSHVUG iOMKIM sc-jzJRlG dGTYFu"
  >
    Items found for 
    <strong
      class="sc-gqjmRU gyUJSx"
    >
      ale
    </strong>
  </h1>
  <ul
    class="sc-gZMcBi PuPZl"
  >
    <li
      class="sc-bxivhb hjuVSK"
    >
      <img
        class="sc-bdVaJa hpZUqN"
        src="undefinedalettes-bracelet.png"
      />
      <p
        class="sc-iwsKbI jrVOTo sc-EHOje RRuYV"
      >
        1
      </p>
    </li>
    <li
      class="sc-bxivhb hjuVSK"
    >
      <img
        class="sc-bdVaJa hpZUqN"
        src="undefinedwhalebone-needle.png"
      />
      <p
        class="sc-iwsKbI jrVOTo sc-EHOje RRuYV"
      >
        1
      </p>
    </li>
  </ul>
</article>
`;

exports[`renders loading state initially 1`] = `
<article
  class="sc-fjdhpX hpJXzn sc-jTzLTM jufxiL"
/>
`;
